--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -39,7 +39,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_panel"
         tools:listitem="@layout/chat_item" />
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/orange"
+        app:layout_constraintBottom_toTopOf="@id/input_layout"
+        />
     <LinearLayout
         android:id="@+id/input_layout"
         android:layout_width="0dp"
